# open-epaper-gen

./: Cargo.toml  Dockerfile
open-epaper-gen/: Cargo.toml  Cross.toml  config.toml
open-epaper-gen/src/: draw.rs  main.rs  modules.rs  news_headlines.rs
xtask/: Cargo.toml
xtask/src/: main.rs
