[package]
name = "open-epaper-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
copy_to_output = "2.1.0"
glob = "0.3"

[dependencies]
fontdue = "0.8.0"
image = "0.25.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.23", features = ["blocking", "multipart"] }
chrono = "0.4.31"
feed-rs = "2.1.0"
rand = "0.8.5"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
config = { version = "0.14", features = ["toml"] }
log = "0.4"
env_logger = "0.11"
tempfile = "3.12"
# Vendored OpenSSL to avoid compatibility issues in Docker and cross-compiling
# issues.
openssl = { version = "0.10", features = ["vendored"] }
